Adjust and optimize the sidebar menu

--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -58,20 +58,10 @@
             <%- site.data.head[i] %>
         <% } %>
     <% } %>
-	
-	<link href="/css/jquery-accordion-menu.css" rel="stylesheet" type="text/css" />
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
 
-	<style type="text/css">
-		#demo-list a{
-			overflow:hidden;
-			text-overflow:ellipsis;
-			-o-text-overflow:ellipsis;
-			white-space:nowrap;
-			width:100%;
-		}
-	</style>
-
-	<script src="/js/jquery-2.1.1.min.js" type="text/javascript"></script>
-	<script src="/js/jquery-accordion-menu.js" type="text/javascript"></script>
+<link href="/css/sidebar-menu.css" rel="stylesheet" type="text/css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+<script src="/js/jquery-2.1.1.min.js" type="text/javascript"></script>
+<script src="/js/sidebar-menu.js" type="text/javascript"></script>
 </head>
