--- a/layout/_partial/about.ejs
+++ b/layout/_partial/about.ejs
@@ -25,18 +25,18 @@
 
         <section>
           <div class="about-me">
-              <h1 class="about-card-title">
-                <i class="icon icon-lg icon-mars" aria-hidden="true"></i> <%= __('menu.user') %>
-              </h1>
+              <h4 >
+                <i class="icon icon-lg icon-user-o" aria-hidden="true"></i> <%= __('menu.user') %>
+              </h4>
               <div class="content"><%- post.content %></div>
           </div>
         </section>
 
         <% if (aboutData.skills) { %>
         <section>
-            <h1 class="about-card-title">
-              <i class="icon icon-lg icon-cogs" aria-hidden="true"></i> <%= __('about.skills') %>
-            </h1>
+            <h4 >
+              <i class="icon icon-lg icon-sliders" aria-hidden="true"></i> <%= __('about.skills') %>
+            </h4>
             <ul class="skill-list">
                 <% for (var skill in aboutData.skills) { %>
                     <% if (aboutData.skills[skill] > 0) { %>
@@ -62,9 +62,9 @@
 
         <% if (aboutData.projects && aboutData.projects.length > 0) { %>
         <section>
-            <h1 class="about-card-title">
+            <h4 >
               <i class="icon icon-lg icon-cubes" aria-hidden="true"></i> <%= __('about.projects') %>
-            </h1>
+            </h4>
             <div class="flex-row-wrap">
               <% for (var i in aboutData.projects) { %>
                 <div class="project-item flex-col">
