--- a/layout/_partial/post/copyright.ejs
+++ b/layout/_partial/post/copyright.ejs
@@ -1,4 +1,4 @@
-<blockquote class="post-copyright">
+<div class="post-copyright">
 <% if (page.hide_license !== true && theme.license || page.license) { %>
         <blockquote style="margin: 2em 0 0;padding: 0.5em 1em;border-left: 3px solid #F44336;background-color: #F5F5F5;list-style: none;">
             <p>
@@ -20,4 +20,4 @@
             <%- config.author %>
         </a>
     </footer>
-</blockquote>
+</div>
