--- a/layout/_partial/post/copyright.ejs
+++ b/layout/_partial/post/copyright.ejs
@@ -1,6 +1,6 @@
 <div class="post-copyright">
 <% if (page.hide_license !== true && theme.license || page.license) { %>
-        <blockquote style="margin: 2em 0 0;padding: 0.5em 1em;border-left: 3px solid #F44336;background-color: #F5F5F5;list-style: none;">
+        <blockquote style="margin: 2em 0 0;padding: 0.5em 1em;border-left: 3px solid #F44336;background-color: #F5F5F5;list-style: none;font-size:14px;">
             <p>
 	            <b>本文标题：</b> <%- page.title %><br>
 	            <b>最后更新：</b><%= date(page.updated, 'YYYY 年 MM 月 DD 日 - HH:MM') %><br>
